deployments/pathweb/workloads/home-network/home-assistant-matter-hub/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: home-assistant-matter-hub
  namespace: home-network
spec:
  selector:
    app.kubernetes.io/name: home-assistant-matter-hub
  clusterIP: None
  ports:
  - port: 8482
    targetPort: 8482
    name: http
    protocol: TCP
    appProtocol: http
